--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Fent clic en aquest botó podeu crear un lloc web públic o privat per a la vostra organització.
 by-date-range=Per interval de dies:
 by-email-address=Per correu electrònic
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Per nom d'usuari
 by-time-frame=Per marc de temps:
 by-user-id=Per l'ID d'usuari
@@ -3147,7 +3147,7 @@ collection-item=Element de la col·lecció
 collection-items=Elements de la col·lecció
 collection-mapping-help=Podeu utilitzar el mapatge per mostrar camps concrets dels elements de la col·lecció. Els camps disponibles depenen del tipus i el subtipus comú a tots els elements de la col·lecció.
 collection-page=Pàgina de recollida
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Proveïdor de col·leccions
 collection-providers=Proveïdors de col·leccions
 collection-title=Títol de la col·lecció
@@ -11645,7 +11645,6 @@ potential-actions=Accions potencials
 pound=Lliura
 power-users=Usuaris avançats
 powered-by-x=Amb tecnologia de {0}
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Precisió
 precision-decimal=Precisió decimal
 precompile-jsps-for-faster-speed=Pre-compila els fitxers jsp per augmentar la velocitat.
@@ -11653,6 +11652,7 @@ predefined=Predefinit
 predefined-value=Valor predefinit
 predefined-variables=Variables predefinides
 preferences=Preferències
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=prefix
 prefix-and-suffix-symbols=Símbols de prefix i sufix
 prefix-or-suffix=Prefix o sufix
