--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Mit diesem Umschalter können Sie eine öffentliche und/oder private Website für Ihre Organisation erstellen.
 by-date-range=Nach Datumsbereich:
 by-email-address=Mit E-Mail-Adresse
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Mit Benutzername
 by-time-frame=Nach Zeitspanne:
 by-user-id=Mit Benutzer-ID
@@ -3147,7 +3147,7 @@ collection-item=Sammlungselement
 collection-items=Sammlungselemente
 collection-mapping-help=Sie können die Zuordnung verwenden, um bestimmte Felder der Elemente in der Sammlung anzuzeigen. Welche Felder verfügbar sind, hängt vom Typ und Untertyp ab, die allen Elementen in der Sammlung gemeinsam sind.
 collection-page=Seite der Sammlung
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Anbieter der Sammlung
 collection-providers=Anbieter der Sammlung
 collection-title=Titel der Sammlung
@@ -11645,7 +11645,6 @@ potential-actions=Mögliche Aktionen
 pound=Pfund
 power-users=Power-Benutzer
 powered-by-x=Powered By {0}
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Genauigkeit
 precision-decimal=Präzision der Dezimalzahl
 precompile-jsps-for-faster-speed=Vorkompiliere von JSPs für bessere Performanz.
@@ -11653,6 +11652,7 @@ predefined=Vorgegeben
 predefined-value=Vorgegebener Wert
 predefined-variables=Vordefinierte Variablen
 preferences=Einstellungen
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Präfix
 prefix-and-suffix-symbols=Präfix- und Suffix-Symbole
 prefix-or-suffix=Präfix oder Suffix
