--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Κάνοντας κλικ σε αυτήν την εναλλαγή, μπορείτε να δημιουργήσετε μια δημόσια ή/και ιδιωτική τοποθεσία για τον οργανισμό σας. (Automatic Translation)
 by-date-range=Βάσει χρονικής περιόδου:
 by-email-address=Βάσει διεύθυνσης email
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Βάσει προσδιοριστικού χρήστη (screen name)
 by-time-frame=Βάσει χρονικού πλαισίου:
 by-user-id=Βάσει ταυτότητας χρήστη
@@ -3147,7 +3147,7 @@ collection-item=Στοιχείο συλλογής (Automatic Translation)
 collection-items=Στοιχεία συλλογής (Automatic Translation)
 collection-mapping-help=Μπορείτε να χρησιμοποιήσετε την αντιστοίχιση για να εμφανίσετε συγκεκριμένα πεδία των στοιχείων της συλλογής. Τα διαθέσιμα πεδία εξαρτώνται από τον τύπο και τον υποτύπο που είναι κοινά σε όλα τα στοιχεία της συλλογής. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Υπηρεσία παροχής συλλογής (Automatic Translation)
 collection-providers=Υπηρεσίες παροχής συλλογής (Automatic Translation)
 collection-title=Τίτλος συλλογής (Automatic Translation)
@@ -11643,7 +11643,6 @@ potential-actions=Πιθανές ενέργειες
 pound=λίρα
 power-users=Δυνατοί χρήστες
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=ακρίβεια (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Προ-μεταγλωττίζει JSP για ταχύτερη ταχύτητα. (Automatic Translation)
@@ -11651,6 +11650,7 @@ predefined=Προκαθορισμένο
 predefined-value=Προκαθορισμένη τιμή
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=Προτιμήσεις
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Πρόθεμα
 prefix-and-suffix-symbols=Σύμβολα πρόθεμα και επιθηλίωμα (Automatic Translation)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
