--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=En cliquant sur ce bouton, vous pouvez créer un site public et/ou privé pour votre organisation.
 by-date-range=Par plage de dates :
 by-email-address=Par adresse e-mail
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Par login
 by-time-frame=Par période :
 by-user-id=Par ID utilisateur
@@ -3147,7 +3147,7 @@ collection-item=Élément de collection
 collection-items=Éléments de collection
 collection-mapping-help=Vous pouvez utiliser le mappage pour afficher des champs spécifiques des éléments de la collection. Les champs disponibles dépendent du type et du sous-type communs à tous les éléments de la collection.
 collection-page=Page de collection
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Fournisseur de collections
 collection-providers=Fournisseurs de collections
 collection-title=Intitulé de la collection
@@ -11645,7 +11645,6 @@ potential-actions=Actions potentielles
 pound=Livre
 power-users=Utilisateurs intensifs
 powered-by-x=Proposé par {0}
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Précision
 precision-decimal=Décimale de précision
 precompile-jsps-for-faster-speed=Précompiler les JSP pour aller plus vite.
@@ -11653,6 +11652,7 @@ predefined=Prédéfini(e)(s)
 predefined-value=Valeur prédéfinie
 predefined-variables=Variables prédéfinies
 preferences=Préférences
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Préfixe
 prefix-and-suffix-symbols=Symboles de préfixe et de suffixe
 prefix-or-suffix=Préfixe ou suffixe
