--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -2436,7 +2436,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Facendo clic su questo interruttore è possibile creare un sito pubblico e/o privato per l'organizzazione. (Automatic Translation)
 by-date-range=Per Intervallo di Date:
 by-email-address=Per Indirizzo Email
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Per Nome Utente
 by-time-frame=Per Intervallo di Tempo:
 by-user-id=Per ID Utente
@@ -3146,7 +3146,7 @@ collection-item=Elemento raccolta (Automatic Translation)
 collection-items=Elementi di raccolta (Automatic Translation)
 collection-mapping-help=È possibile utilizzare il mapping per visualizzare campi specifici degli elementi della raccolta. I campi disponibili dipendono dal tipo e dal sottotipo comuni a tutti gli elementi della raccolta. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Provider di raccolte (Automatic Translation)
 collection-providers=Provider di raccolta (Automatic Translation)
 collection-title=Titolo della collezione (Automatic Translation)
@@ -11644,7 +11644,6 @@ potential-actions=Azioni potenziali
 pound=Libbra
 power-users=Utenti Autorizzati
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=precisione (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Precompila pagine JSPs per migliorare le prestazioni.
@@ -11652,6 +11651,7 @@ predefined=Predefinito
 predefined-value=Valore predefinito
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=Preferenze
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Prefisso
 prefix-and-suffix-symbols=Simboli prefisso e suffisso (Automatic Translation)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
