--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=על ידי לחיצה על המתג הדו-מצבי הזה באפשרותך ליצור אתר ציבורי ו/או פרטי עבור הארגון שלך.
 by-date-range=לפי טווח התאריכים:
 by-email-address=לפי כתובת האימייל
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=לפי כינוי
 by-time-frame=לפי מסגרת זמן:
 by-user-id=לפי קוד זיהוי המשתמש
@@ -3147,7 +3147,7 @@ collection-item=פריט אוסף (Automatic Translation)
 collection-items=פריטי אוסף (Automatic Translation)
 collection-mapping-help=באפשרותך להשתמש במיפוי כדי להציג שדות ספציפיים של הפריטים באוסף. השדות הזמינים תלויים בסוג ובסוג המשנה המשותפים לכל הפריטים באוסף. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=ספק אוסף (Automatic Translation)
 collection-providers=ספקי גבייה (Automatic Translation)
 collection-title=כותרת אוסף (Automatic Translation)
@@ -11643,7 +11643,6 @@ potential-actions=פעולות פוטנציאליות
 pound=פאונד
 power-users=משתמשי על
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=דיוק (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=הדר מראש את ה-JSPs למהירות גבוהה יותר.
@@ -11651,6 +11650,7 @@ predefined=מוגדר מראש
 predefined-value=ערך מוגדר מראש
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=העדפות
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=תחילית
 prefix-and-suffix-symbols=סימני קידומת וסיומת (Automatic Translation)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
