--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=이 토글을 클릭하면 조직에 대한 공개 및/또는 비공개 사이트를 만들 수 있습니다. (Automatic Translation)
 by-date-range=Date Range까지:
 by-email-address=전자 우편 주소에 의하여
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=스크린 이름에 의하여
 by-time-frame=시간 구조의옆:
 by-user-id=사용자 고유 번호에 의하여
@@ -3147,7 +3147,7 @@ collection-item=컬렉션 아이템 (Automatic Translation)
 collection-items=컬렉션 아이템 (Automatic Translation)
 collection-mapping-help=매핑을 사용하여 컬렉션의 항목의 특정 필드를 표시할 수 있습니다. 사용 가능한 필드는 컬렉션의 모든 항목에 공통적인 형식 및 하위 유형에 따라 다릅니다. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=컬렉션 공급자 (Automatic Translation)
 collection-providers=컬렉션 공급자 (Automatic Translation)
 collection-title=컬렉션 제목 (Automatic Translation)
@@ -11643,7 +11643,6 @@ potential-actions=잠재적인 활동
 pound=파운드
 power-users=파워 사용자 (Automatic Translation)
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=정밀 (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=빠른 속도를 위해 JSP를 미리 컴파일합니다. (Automatic Translation)
@@ -11651,6 +11650,7 @@ predefined=미리 정의 된 (Automatic Translation)
 predefined-value=미리 정의된 값 (Automatic Translation)
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=특혜
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=접두어
 prefix-and-suffix-symbols=접두사와 접미사 기호 (Automatic Translation)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
