--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Spustelėję šį perjungiklį galite sukurti savo organizacijos viešąją ir (arba) privačią svetainę. (Automatic Translation)
 by-date-range=Pagal datų diapazoną: (Automatic Translation)
 by-email-address=Pagal el. pašto adresą (Automatic Translation)
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Pagal ekrano pavadinimą (Automatic Translation)
 by-time-frame=Pagal laiko tarpą: (Automatic Translation)
 by-user-id=Pagal vartotojo ID (Automatic Translation)
@@ -3147,7 +3147,7 @@ collection-item=Rinkinio elementas (Automatic Translation)
 collection-items=Surinkimo elementai (Automatic Translation)
 collection-mapping-help=Susiejimą galite naudoti konkretiems rinkinio elementų laukams rodyti. Galimi laukai priklauso nuo tipo ir potipio, būdingo visiems rinkinio elementams. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Rinkinio teikėjas (Automatic Translation)
 collection-providers=Surinkimo paslaugų teikėjai (Automatic Translation)
 collection-title=Rinkinio pavadinimas (Automatic Translation)
@@ -11643,7 +11643,6 @@ potential-actions=Galimi veiksmai (Automatic Translation)
 pound=Svaras (Automatic Translation)
 power-users=Maitinimo vartotojai (Automatic Translation)
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Tikslumo (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Iš anksto sukompiliuoti JSP greitesniam greičiui. (Automatic Translation)
@@ -11651,6 +11650,7 @@ predefined=Paruoštasis (Automatic Translation)
 predefined-value=Iš anksto nustatyta vertė (Automatic Translation)
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=Nuostatos (Automatic Translation)
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Priešdėlis (Automatic Translation)
 prefix-and-suffix-symbols=Prefikso ir priesagos simboliai (Automatic Translation)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
