--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Če kliknete to preklopno okno, lahko ustvarite javno in/ali zasebno mesto za vašo organizacijo. (Automatic Translation)
 by-date-range=Po datumu:
 by-email-address=Po e-pošti
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Po vzdevku
 by-time-frame=Po časovnem intervalu:
 by-user-id=Po uporabnikovem IDju
@@ -3147,7 +3147,7 @@ collection-item=Element zbirke (Automatic Translation)
 collection-items=Elementi zbirke (Automatic Translation)
 collection-mapping-help=S kartiranjem lahko prikažete določena polja elementov v zbirki. Polja, ki so na voljo, so odvisna od vrste in podtip, ki sta skupna vsem elementom v zbirki. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Ponudnik zbirke (Automatic Translation)
 collection-providers=Ponudniki zbiranja (Automatic Translation)
 collection-title=Naslov zbirke (Automatic Translation)
@@ -11643,7 +11643,6 @@ potential-actions=Možna dejanja (Automatic Translation)
 pound=Funt
 power-users=Uporabniki napajanja (Automatic Translation)
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Natančnost (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Predkompile JSP za hitrejšo hitrost. (Automatic Translation)
@@ -11651,6 +11650,7 @@ predefined=Vnaprej določene (Automatic Translation)
 predefined-value=Vnaprej določena vrednost (Automatic Translation)
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=Nastavitve
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Predpona
 prefix-and-suffix-symbols=Simboli predpone in sufixa (Automatic Translation)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
