--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Като щракнете върху този превключващ бутон, можете да създадете публичен и/или частен сайт за вашата организация. (Automatic Translation)
 by-date-range=По диапазон от дати:
 by-email-address=По адрес от електронна поща
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=По потребителско име
 by-time-frame=По времева рамка:
 by-user-id=По потребителско ID
@@ -3147,7 +3147,7 @@ collection-item=Елемент на колекция (Automatic Translation)
 collection-items=Елементи на колекцията (Automatic Translation)
 collection-mapping-help=Можете да използвате нанасяне, за да покажете конкретни полета на елементите в колекцията. Наличните полета зависят от типа и подтипа, общ за всички елементи в колекцията. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Доставчик на колекция (Automatic Translation)
 collection-providers=Доставчици на събиране (Automatic Translation)
 collection-title=Заглавие на колекцията (Automatic Translation)
@@ -11643,7 +11643,6 @@ potential-actions=Потенциални действия (Automatic Translation
 pound=Паунд
 power-users=Потребители на захранването (Automatic Translation)
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Точност (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Предварително компилирате СНЕ за по-бърза скорост. (Automatic Translation)
@@ -11651,6 +11650,7 @@ predefined=Предварително зададени (Automatic Translation)
 predefined-value=Предварително зададена стойност (Automatic Translation)
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=Настройки
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Префикс
 prefix-and-suffix-symbols=Префикс и наставка символи (Automatic Translation)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
