--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Al hacer clic en este botón de alternancia, puede crear un sitio privado o público para su organización.
 by-date-range=Por rango de fechas:
 by-email-address=Por dirección de correo electrónico
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Por nombre de usuario
 by-time-frame=Por periodo de tiempo:
 by-user-id=Por identificador del usuario
@@ -3147,7 +3147,7 @@ collection-item=Elemento de la colección
 collection-items=Elementos de la colección
 collection-mapping-help=Puede usar la asignación de campos para mostrar campos específicos de los elementos de la colección. Los campos disponibles dependen del tipo y subtipo comunes a todos los elementos de la colección.
 collection-page=Página de colección
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Proveedor de colecciones
 collection-providers=Proveedores de colecciones
 collection-title=Título de la colección
@@ -11645,7 +11645,6 @@ potential-actions=Acciones potenciales
 pound=Libra
 power-users=Usuarios con rol Power User
 powered-by-x=Desarrollado por {0}
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Precisión
 precision-decimal=Decimal de precisión
 precompile-jsps-for-faster-speed=Precompile los archivos JSP para mayor velocidad.
@@ -11653,6 +11652,7 @@ predefined=Predefinido
 predefined-value=Valor predefinido
 predefined-variables=Variables predefinidas
 preferences=Preferencias
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Prefijo
 prefix-and-suffix-symbols=Símbolos de prefijo y sufijo
 prefix-or-suffix=Prefijo o sufijo
