--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Selle tumblernuudli klõpsamisel võite luua oma ettevõtte jaoks avaliku ja/või privaatse saidi. (Automatic Translation)
 by-date-range=Ajavahemikuks:
 by-email-address=E-posti kaudu
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Kasutajatunnuse kaudu
 by-time-frame=Ajaraamistiku kaudu:
 by-user-id=Kasutaja ID kaudu
@@ -3147,7 +3147,7 @@ collection-item=Sissenõudeüksus (Automatic Translation)
 collection-items=Kollektsiooni üksused (Automatic Translation)
 collection-mapping-help=Vastenduse abil saate kuvada kollektsiooni üksuste kindlaid välju. Saadaolevad väljad sõltuvad kogumi kõigi üksuste ühisest tüübist ja alamtüübist. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Inkassopakkuja (Automatic Translation)
 collection-providers=Kogumise pakkujad (Automatic Translation)
 collection-title=Kollektsiooni tiitel (Automatic Translation)
@@ -11643,7 +11643,6 @@ potential-actions=Võimalikud meetmed (Automatic Translation)
 pound=Naelsterling
 power-users=Energiakasutajad (Automatic Translation)
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Täpsus (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Kiirema kiiruse jaoks eelkompileerida JSP-d. (Automatic Translation)
@@ -11651,6 +11650,7 @@ predefined=Eelmääratletud (Automatic Translation)
 predefined-value=Eelmääratletud väärtus (Automatic Translation)
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=Eelistused
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Eesliide
 prefix-and-suffix-symbols=Eesliite ja järelliite sümbolid (Automatic Translation)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
