--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=By clicking this toggle you could create a public and/or private site for your organization. (Automatic Copy)
 by-date-range=Data hauen bitartean:
 by-email-address=Posta elektronikoz
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Erabiltzailearen izenaz
 by-time-frame=Denbora tartez:
 by-user-id=Erabiltzaile identifikatzaileaz
@@ -3147,7 +3147,7 @@ collection-item=Collection Item (Automatic Copy)
 collection-items=Collection Items (Automatic Copy)
 collection-mapping-help=You can use mapping to display specific fields of the items in the collection. The fields available depend on the type and subtype common to all items in the collection. (Automatic Copy)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Collection Provider (Automatic Copy)
 collection-providers=Collection Providers (Automatic Copy)
 collection-title=Collection Title (Automatic Copy)
@@ -11643,7 +11643,6 @@ potential-actions=Ekintza potentzialak
 pound=Libra
 power-users=Erabiltzaile Ahaldunak
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Precision (Automatic Copy)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Precompile JSPs for faster speed. (Automatic Copy)
@@ -11651,6 +11650,7 @@ predefined=Predefined (Automatic Copy)
 predefined-value=Aurredefinituriko balioa
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=Hobespenak
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Aurrizkia
 prefix-and-suffix-symbols=Prefix and Suffix Symbols (Automatic Copy)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
