--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=با کلیک کردن بر روی این تغییر می توانید یک سایت عمومی و/یا خصوصی برای سازمان خود ایجاد کنید. (Automatic Translation)
 by-date-range=با محدوده زمانی
 by-email-address=با آدرس ایمیل
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=نام کاربری
 by-time-frame=با چارچوب زمانی
 by-user-id=با شناسه کاربری
@@ -3147,7 +3147,7 @@ collection-item=آیتم جمع آوری (Automatic Translation)
 collection-items=موارد جمع آوری (Automatic Translation)
 collection-mapping-help=برای نمایش فیلدهای خاص موارد موجود در مجموعه می توانید از نقشه برداری استفاده کنید. زمینه های موجود بستگی به نوع و زیرتیپ مشترک با تمام موارد موجود در مجموعه دارد. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=ارائه دهنده مجموعه (Automatic Translation)
 collection-providers=مجموعه ارائه شده
 collection-title=عنوان مجموعه (Automatic Translation)
@@ -11643,7 +11643,6 @@ potential-actions=عملیات ذخیره
 pound=پوند
 power-users=کاربران Power
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=دقت
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=JSPs Precompile برای سرعت سریع تر. (Automatic Translation)
@@ -11651,6 +11650,7 @@ predefined=از پیش تعریف شده
 predefined-value=مقدار از پیش تعیین شده
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=تنظیمات
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=پيشوند
 prefix-and-suffix-symbols=نمادهای پیشوند و پسوند (Automatic Translation)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
