--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=इस टॉगल पर क्लिक करके आप अपने संगठन के लिए एक सार्वजनिक और/या निजी साइट बना सकते हैं । (Automatic Translation)
 by-date-range=रेंज डेट तक:
 by-email-address=ईमेल पता के द्वारा
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=स्क्रीन नेम के द्वारा
 by-time-frame=टाइम फ्रेम के द्वारा:
 by-user-id=यूज़र आइडी के द्वारा
@@ -3147,7 +3147,7 @@ collection-item=संग्रह आइटम (Automatic Translation)
 collection-items=संग्रह आइटम
 collection-mapping-help=आप संग्रह में वस्तुओं के विशिष्ट फ़ील्ड प्रदर्शित करने के लिए मानचित्रण का उपयोग कर सकते हैं. उपलब्ध फ़ील्ड संग्रह में सभी वस्तुओं के लिए सामान्य प्रकार और उपप्रकार पर निर्भर करते हैं। (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=संग्रह प्रदाता
 collection-providers=संग्रह प्रदाता
 collection-title=संग्रह का शीर्षक
@@ -11643,7 +11643,6 @@ potential-actions=संभावित कार्रवाई (Automatic Tran
 pound=पाउंड (Automatic Translation)
 power-users=पावर यूजर्स (Automatic Translation)
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=यथार्थता (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=तेज गति के लिए जेएसपी को प्रीकंप्यूट करें। (Automatic Translation)
@@ -11651,6 +11650,7 @@ predefined=पूर्वनिर्धारित (Automatic Translation)
 predefined-value=पूर्वनिर्धारित मूल्य (Automatic Translation)
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=प्राथमिकतायें
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=पूर्वसर्ग (Automatic Translation)
 prefix-and-suffix-symbols=उपसर्ग और प्रत्यय प्रतीक (Automatic Translation)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
