--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=A váltókapcsolóra kattintva nyilvános és/vagy privát webhelyet hozhat létre szervezetének.
 by-date-range=Dátumtartomány alapján:
 by-email-address=E-mail cím alapján
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Felhasználónév alapján
 by-time-frame=Idő alapján:
 by-user-id=Felhasználói azonosító alapján
@@ -3147,7 +3147,7 @@ collection-item=Gyűjtemény eleme
 collection-items=Gyűjtemény elemei
 collection-mapping-help=A leképezés segítségével a gyűjteményben szereplő elemek adott mezőit jelenítheti meg. Az, hogy mely mezők állnak rendelkezésre, attól függ, hogy mely típusok és altípusok jellemzőek a gyűjteményben lévő elemek összességére.
 collection-page=Gyűjtemény oldala
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Gyűjteményszolgáltató
 collection-providers=Gyűjteményszolgáltatók
 collection-title=Gyűjtemény címe
@@ -11646,7 +11646,6 @@ potential-actions=Lehetséges műveletek
 pound=Font
 power-users=Kiemelt felhasználók
 powered-by-x=Szolgáltató: {0}
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Pontosság
 precision-decimal=Tizedes pontosság
 precompile-jsps-for-faster-speed=Gyorsabb futás érdekében fordítsd le a JSP-t.
@@ -11654,6 +11653,7 @@ predefined=Előre meghatározott
 predefined-value=Kijelölt érték
 predefined-variables=Elődefiniált változók
 preferences=Beállítások
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Előtag
 prefix-and-suffix-symbols=Előtag és utótag szimbólumok
 prefix-or-suffix=Előtag vagy utótag
