--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=このスイッチをクリックすると、自組織の公開サイトや非公開サイトを作成できます。
 by-date-range=日付範囲別:
 by-email-address=メールアドレス
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=スクリーン名
 by-time-frame=時間別:
 by-user-id=ユーザーID
@@ -3147,7 +3147,7 @@ collection-item=コレクション項目
 collection-items=コレクション項目
 collection-mapping-help=マッピングを使用して、コレクション内のアイテムの特定のフィールドを表示することができます。利用可能なフィールドは、コレクション内のすべてのアイテムに共通するタイプとサブタイプによって異なります。
 collection-page=コレクションページ
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=コレクションプロバイダー
 collection-providers=コレクションプロバイダー
 collection-title=コレクションタイトル
@@ -11645,7 +11645,6 @@ potential-actions=潜在的な行為
 pound=ポンド
 power-users=パワーユーザー
 powered-by-x=Powered by {0}
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=精度
 precision-decimal=小数の精度
 precompile-jsps-for-faster-speed=ユーザーの体感速度をあげるためにJSPをプリコンパイルする。
@@ -11653,6 +11652,7 @@ predefined=規定値
 predefined-value=初期値
 predefined-variables=定義済み変数
 preferences=表示設定
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=敬称
 prefix-and-suffix-symbols=接頭辞および接尾辞の文字
 prefix-or-suffix=接頭辞または接尾辞
