--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_kk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_kk.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=By clicking this toggle you could create a public and/or private site for your organization. (Automatic Copy)
 by-date-range=By Date Range: (Automatic Copy)
 by-email-address=By Email Address (Automatic Copy)
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=By Screen Name (Automatic Copy)
 by-time-frame=By Time Frame: (Automatic Copy)
 by-user-id=By User ID (Automatic Copy)
@@ -3147,7 +3147,7 @@ collection-item=Collection Item (Automatic Copy)
 collection-items=Collection Items (Automatic Copy)
 collection-mapping-help=You can use mapping to display specific fields of the items in the collection. The fields available depend on the type and subtype common to all items in the collection. (Automatic Copy)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Collection Provider (Automatic Copy)
 collection-providers=Collection Providers (Automatic Copy)
 collection-title=Collection Title (Automatic Copy)
@@ -11643,7 +11643,6 @@ potential-actions=Potential Actions (Automatic Copy)
 pound=Pound (Automatic Copy)
 power-users=Power Users (Automatic Copy)
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Precision (Automatic Copy)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Precompile JSPs for faster speed. (Automatic Copy)
@@ -11651,6 +11650,7 @@ predefined=Predefined (Automatic Copy)
 predefined-value=Predefined Value (Automatic Copy)
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=Preferences (Automatic Copy)
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Prefix (Automatic Copy)
 prefix-and-suffix-symbols=Prefix and Suffix Symbols (Automatic Copy)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
