--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Klikając ten przełącznik, można utworzyć publiczną i/lub prywatną witrynę dla swojej organizacji. (Automatic Translation)
 by-date-range=Przez zakres dat:
 by-email-address=Przez adres e-mail
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Przez nazwę użytkownika
 by-time-frame=Przez ramy czasowe:
 by-user-id=Przez ID użytkownika
@@ -3147,7 +3147,7 @@ collection-item=Element kolekcji (Automatic Translation)
 collection-items=Elementy kolekcji (Automatic Translation)
 collection-mapping-help=Za pomocą mapowania można wyświetlić określone pola elementów w kolekcji. Dostępne pola zależą od typu i podtypu wspólnego dla wszystkich elementów w kolekcji. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Dostawca windykacji (Automatic Translation)
 collection-providers=Dostawcy windykacji (Automatic Translation)
 collection-title=Tytuł kolekcji (Automatic Translation)
@@ -11643,7 +11643,6 @@ potential-actions=Potencjalne działania
 pound=Funt
 power-users=Nadużytkownicy
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Precyzji (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Wstępnie kompiluj JSP dla szybszej prędkości. (Automatic Translation)
@@ -11651,6 +11650,7 @@ predefined=Predefiniowany
 predefined-value=Wartość predefiniowana
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=Ustawienia
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Przedrostek
 prefix-and-suffix-symbols=Symbole prefiksu i przyrostka (Automatic Translation)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
