--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Făcând clic pe acest comutator, puteți crea un site public și /sau privat pentru organizația dvs. (Automatic Translation)
 by-date-range=După Distanta dintre Date:
 by-email-address=După Adresa de Email
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=După Nume Utilizator
 by-time-frame=După Perioada de Timp:
 by-user-id=După ID Utilizator
@@ -3147,7 +3147,7 @@ collection-item=Element colecție (Automatic Translation)
 collection-items=Elemente colecție (Automatic Translation)
 collection-mapping-help=Aveți posibilitatea să utilizați maparea pentru a afișa anumite câmpuri ale elementelor din colecție. Câmpurile disponibile depind de tipul și subtipul comune tuturor elementelor din colecție. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Furnizor de colectare (Automatic Translation)
 collection-providers=Furnizori de colectare (Automatic Translation)
 collection-title=Titlu colecție (Automatic Translation)
@@ -11643,7 +11643,6 @@ potential-actions=Actiuni Potentiale
 pound=Liră (Automatic Translation)
 power-users=Utilizatori Puternici
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=precizie (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=JSP-uri precompile pentru viteză mai mare. (Automatic Translation)
@@ -11651,6 +11650,7 @@ predefined=Predefinite (Automatic Translation)
 predefined-value=Valoare Predefinia
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=Preferinte
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Prefix (Automatic Translation)
 prefix-and-suffix-symbols=Prefix și simboluri sufix (Automatic Translation)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
