--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Kliknutím na toto prepínače môžete vytvoriť verejnú alebo súkromnú lokalitu pre svoju organizáciu. (Automatic Translation)
 by-date-range=Rozsah podľa dátumu:
 by-email-address=Podľa e-mailovej adresy
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Podľa používateľského mena
 by-time-frame=Podľa časového rozvrhu:
 by-user-id=Podľa ID používateľa
@@ -3147,7 +3147,7 @@ collection-item=Položka kolekcie (Automatic Translation)
 collection-items=Položky kolekcie (Automatic Translation)
 collection-mapping-help=Priradenie môžete použiť na zobrazenie konkrétnych polí položiek v kolekcii. Dostupné polia závisia od typu a podtypu spoločného pre všetky položky v kolekcii. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=Poskytovateľ kolekcie (Automatic Translation)
 collection-providers=Poskytovatelia zberu (Automatic Translation)
 collection-title=Názov kolekcie (Automatic Translation)
@@ -11643,7 +11643,6 @@ potential-actions=Potencionálne akcie
 pound=Libra
 power-users=Pokročilí používatelia
 powered-by-x=Powered by {0} (Automatic Copy)
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=presnosť (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Predkompilujte JSP pre vyššiu rýchlosť. (Automatic Translation)
@@ -11651,6 +11650,7 @@ predefined=Preddefinované
 predefined-value=Preddefinovaná hodnota
 predefined-variables=Predefined Variables (Automatic Copy)
 preferences=Nastavenia
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=Titul
 prefix-and-suffix-symbols=Symboly predpony a prípony (Automatic Translation)
 prefix-or-suffix=Prefix or Suffix (Automatic Copy)
