--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=點擊此開關，您可以為所在組織創建公開和/或不公開站台。
 by-date-range=以時間區段：
 by-email-address=以電子郵件
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=以螢幕名稱
 by-time-frame=以時間架構：
 by-user-id=以使用者ID
@@ -3147,7 +3147,7 @@ collection-item=集合項目
 collection-items=集合項目
 collection-mapping-help=您可以使用映射來顯示集合中條目的特定欄位。可用欄位取決於集合中所有條目共有的類型和子類型。
 collection-page=集合頁面
-collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
+collection-prefiltered=Collection Prefiltered (Automatic Copy)
 collection-provider=集合提供者
 collection-providers=集合提供者
 collection-title=集合標題
@@ -11644,7 +11644,6 @@ potential-actions=可能動作
 pound=磅
 power-users=超級使用者
 powered-by-x=由 {0} 提供
-pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=總位數
 precision-decimal=高精度小數
 precompile-jsps-for-faster-speed=Precompile JSPs 以加快速度。
@@ -11652,6 +11651,7 @@ predefined=預先定義
 predefined-value=預先定義值
 predefined-variables=預定義變數
 preferences=偏好
+prefilter-collection=Prefilter Collection (Automatic Copy)
 prefix=前綴
 prefix-and-suffix-symbols=前綴與後綴符號
 prefix-or-suffix=前綴或後綴
